--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,19 @@
 @import "tailwindcss";
 
+@keyframes fade-down {
+    from {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .animate-fade-down {
+    animation: fade-down 0.2s ease-out;
+  }
+
+  
+  
